#001 added skills section, deleted side column in welcome board

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="ver-separator"></div>
             <li><a href="#about" alt="ABOUT">ABOUT</a></li>
             <div class="ver-separator"></div>
-            <li><a href="#" alt="SKILLS">SKILLS</a></li>
+            <li><a href="#skills" alt="SKILLS">SKILLS</a></li>
             <div class="ver-separator"></div>
             <li><a href="#" alt="PROJECTS">PROJECTS</a></li>
             <div class="ver-separator"></div>
@@ -26,31 +26,18 @@
     </nav>
     <header>
         <div id="wrapper-main">
-        <div class="side-column">
-        </div>
         <div class="welcome-board">
             <h1>paweł zaic</h1>
-            <!-- <div class="separator"></div> -->
             <h2>portfolio</h2>
             <div class="hor-separator"></div>
             <h2>coderscamp</h2>
- <!--            <div class="hor-separator"></div>
-            <h2>programming enthusiast</h2> -->
         </div>
-        <div class="side-column">
-            <!-- <a href="#">MENU</a> -->
-        </div>
-        </div>
-        <!-- <div class="wrapper-bottom">
-            <div class="triangle"><a href="#"><span class="fas fa-angle-down"></span></a></div>
-        </div> -->
     </header>
     <div class="bottom-bar"></div>
     <main>
         <div id="about">
             <div class="side-photo">
                 <img src="styles/graphics/about-photo.jpg">
-                <!-- jbjsjraj  ajnfjsajfjk mnal nlfndng nndfnnsdkn mnm nfsdfnklgn -->
             </div>
             <dic class="side-text">
                 <h2>about me</h2>
@@ -68,6 +55,49 @@
                 enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
                 commodi consequatur?
             </dic>
+        </div>
+        <div id="skills">
+            <div class="wrapper-bar">
+                <h2>stack</h2>
+                <div class="flex-wrapper">
+                    <div class="flex-row main-skills">
+                        <div class="skill">
+                            <span class="fab fa-html5"></span>
+                            <div class="skill-name">html</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-css3-alt"></span>
+                            <div class="skill-name">css</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-js-square"></span>
+                            <div class="skill-name">js</div>
+                        </div>
+                    </div>
+                    <div class="flex-row secondary-skills">
+                        <div class="skill">
+                            <span class="fab fa-react"></span>
+                            <div class="skill-name">react</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-java"></span>
+                            <div class="skill-name">java</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-node-js"></span>
+                            <div class="skill-name">node.js</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-git"></span>
+                            <div class="skill-name">git</div>
+                        </div>
+                        <div class="skill">
+                            <span class="fab fa-sass"></span>
+                            <div class="skill-name">sass</div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
         </div>
     </main>
     <footer id="contact">
