#003 - project section added - first draft ready

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="ver-separator"></div>
             <li><a href="#skills" alt="SKILLS">SKILLS</a></li>
             <div class="ver-separator"></div>
-            <li><a href="#" alt="PROJECTS">PROJECTS</a></li>
+            <li><a href="#projects" alt="PROJECTS">PROJECTS</a></li>
             <div class="ver-separator"></div>
             <li><a href="#contact" alt="CONTACT">CONTACT</a></li>
         </ul>
@@ -63,40 +63,92 @@
                     <div class="flex-row main-skills">
                         <div class="skill">
                             <span class="fab fa-html5"></span>
-                            <div class="skill-name">html</div>
+                            <div class="skill-name"><h3>html</h3></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-css3-alt"></span>
-                            <div class="skill-name">css</div>
+                            <div class="skill-name"><h3>css</h3></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-js-square"></span>
-                            <div class="skill-name">js</div>
+                            <div class="skill-name"><h3>js</h3></div>
                         </div>
                     </div>
                     <div class="flex-row secondary-skills">
                         <div class="skill">
                             <span class="fab fa-react"></span>
-                            <div class="skill-name">react</div>
+                            <div class="skill-name"><h4>react</h4></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-java"></span>
-                            <div class="skill-name">java</div>
+                            <div class="skill-name"><h4>java</h></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-node-js"></span>
-                            <div class="skill-name">node.js</div>
+                            <div class="skill-name"><h4>node.js</h></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-git"></span>
-                            <div class="skill-name">git</div>
+                            <div class="skill-name"><h4>git</h></div>
                         </div>
                         <div class="skill">
                             <span class="fab fa-sass"></span>
-                            <div class="skill-name">sass</div>
+                            <div class="skill-name"><h4>sass</h></div>
                         </div>
                     </div>
                 </div> 
+            </div>
+        </div>
+        <div id="projects">
+            <div class="main-grid">
+                <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                    <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                    <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                    <div class="project-title"><h1>to-do list</h1></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>calculator</h1></div>
+                    </div>
+                </div>
+                <div class="project">
+                <!-- <div class="project-background-image"></div> -->
+                <div class="project-overlay-text">
+                    <div class="demo"><a href="#" alt="demo"><span class=" fas fa-search"></span></a></div>
+                    <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                    <div class="project-title"><h1>weather forecast</h1></div>
+                </div>
+                </div>
+                <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>cinema</h1></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>guestlist</h1></div>
+                    </div>
+                </div>
+                <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>strava analyzer</h1></div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
