#004 - RWD (Nav, Welcome-Board, Sticky-Bar, Projects, Footer)

--- a/index.html
+++ b/index.html
@@ -11,160 +11,162 @@
     <title>Pawel Zaic - portfolio</title>
 </head>
 <body>
-    <nav>
-        <ul class="nav-bar">
-            <li><a href="#wrapper-main" alt="HOME">HOME</a></li>
-            <div class="ver-separator"></div>
-            <li><a href="#about" alt="ABOUT">ABOUT</a></li>
-            <div class="ver-separator"></div>
-            <li><a href="#skills" alt="SKILLS">SKILLS</a></li>
-            <div class="ver-separator"></div>
-            <li><a href="#projects" alt="PROJECTS">PROJECTS</a></li>
-            <div class="ver-separator"></div>
-            <li><a href="#contact" alt="CONTACT">CONTACT</a></li>
-        </ul>
-    </nav>
-    <header>
-        <div id="wrapper-main">
-        <div class="welcome-board">
-            <h1>paweł zaic</h1>
-            <h2>portfolio</h2>
-            <div class="hor-separator"></div>
-            <h2>coderscamp</h2>
-        </div>
-    </header>
-    <div class="bottom-bar"></div>
-    <main>
-        <div id="about">
-            <div class="side-photo">
-                <img src="styles/graphics/about-photo.jpg">
-            </div>
-            <dic class="side-text">
-                <h2>about me</h2>
+    <!-- <div class="site-wrapper"> -->
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="#wrapper-main" alt="HOME">HOME</a></li>
+                <div class="ver-separator"></div>
+                <li><a href="#about" alt="ABOUT">ABOUT</a></li>
+                <div class="ver-separator"></div>
+                <li><a href="#skills" alt="SKILLS">SKILLS</a></li>
+                <div class="ver-separator"></div>
+                <li><a href="#projects" alt="PROJECTS">PROJECTS</a></li>
+                <div class="ver-separator"></div>
+                <li><a href="#contact" alt="CONTACT">CONTACT</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div id="wrapper-main">
+            <div class="welcome-board">
+                <h1>paweł zaic</h1>
+                <h2>portfolio</h2>
                 <div class="hor-separator"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-                velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
-                enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
-                commodi consequatur?
-            </dic>
-        </div>
-        <div id="skills">
-            <div class="wrapper-bar">
-                <h2>stack</h2>
-                <div class="flex-wrapper">
-                    <div class="flex-row main-skills">
-                        <div class="skill">
-                            <span class="fab fa-html5"></span>
-                            <div class="skill-name"><h3>html</h3></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-css3-alt"></span>
-                            <div class="skill-name"><h3>css</h3></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-js-square"></span>
-                            <div class="skill-name"><h3>js</h3></div>
-                        </div>
-                    </div>
-                    <div class="flex-row secondary-skills">
-                        <div class="skill">
-                            <span class="fab fa-react"></span>
-                            <div class="skill-name"><h4>react</h4></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-java"></span>
-                            <div class="skill-name"><h4>java</h></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-node-js"></span>
-                            <div class="skill-name"><h4>node.js</h></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-git"></span>
-                            <div class="skill-name"><h4>git</h></div>
-                        </div>
-                        <div class="skill">
-                            <span class="fab fa-sass"></span>
-                            <div class="skill-name"><h4>sass</h></div>
-                        </div>
-                    </div>
-                </div> 
+                <h2>coderscamp</h2>
             </div>
-        </div>
-        <div id="projects">
-            <div class="main-grid">
-                <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
-                    <div class="project-overlay-text">
-                    <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
-                    <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                    <div class="project-title"><h1>to-do list</h1></div>
-                    </div>
+        </header>
+        <div class="bottom-bar"></div>
+        <main>
+            <div id="about">
+                <div class="side-photo">
+                    <img src="styles/graphics/about-photo.jpg">
                 </div>
-                <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
-                    <div class="project-overlay-text">
-                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
-                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                        <div class="project-title"><h1>calculator</h1></div>
-                    </div>
-                </div>
-                <div class="project">
-                <!-- <div class="project-background-image"></div> -->
-                <div class="project-overlay-text">
-                    <div class="demo"><a href="#" alt="demo"><span class=" fas fa-search"></span></a></div>
-                    <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                    <div class="project-title"><h1>weather forecast</h1></div>
-                </div>
-                </div>
-                <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
-                    <div class="project-overlay-text">
-                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
-                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                        <div class="project-title"><h1>cinema</h1></div>
-                    </div>
-                </div>
-                <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
-                    <div class="project-overlay-text">
-                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
-                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                        <div class="project-title"><h1>guestlist</h1></div>
-                    </div>
-                </div>
-                <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
-                    <div class="project-overlay-text">
-                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
-                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
-                        <div class="project-title"><h1>strava analyzer</h1></div>
-                    </div>
+                <dic class="side-text">
+                    <h2>about me</h2>
+                    <div class="hor-separator"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+                    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                    voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+                    velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
+                    enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
+                    commodi consequatur?
+                </dic>
+            </div>
+            <div id="skills">
+                <div class="wrapper-bar">
+                    <h2>stack</h2>
+                    <div class="flex-wrapper">
+                        <div class="flex-row main-skills">
+                            <div class="skill">
+                                <span class="fab fa-html5"></span>
+                                <div class="skill-name"><h3>html</h3></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-css3-alt"></span>
+                                <div class="skill-name"><h3>css</h3></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-js-square"></span>
+                                <div class="skill-name"><h3>js</h3></div>
+                            </div>
+                        </div>
+                        <div class="flex-row secondary-skills">
+                            <div class="skill">
+                                <span class="fab fa-react"></span>
+                                <div class="skill-name"><h4>react</h4></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-java"></span>
+                                <div class="skill-name"><h4>java</h></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-node-js"></span>
+                                <div class="skill-name"><h4>node.js</h></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-git"></span>
+                                <div class="skill-name"><h4>git</h></div>
+                            </div>
+                            <div class="skill">
+                                <span class="fab fa-sass"></span>
+                                <div class="skill-name"><h4>sass</h></div>
+                            </div>
+                        </div>
+                    </div> 
                 </div>
             </div>
-        </div>
-    </main>
-    <footer id="contact">
-        <div class="icons">
-        <a href="https://www.facebook.com/pawel.zaic" alt="Facebook" target="_blank">
-            <span class="fab fa-facebook-square"></span>
-        </a>
-        <a href="https://github.com/PabloFX" alt="GitHub" target="_blank">
-            <span class="fab fa-github"></span>
-        </a>
-        <a href="https://www.linkedin.com/in/paweł-zaic-69622aa5/" alt="Linkedin" target="_blank">
-            <span class="fab fa-linkedin"></span>
-        </a>
-        </div>
-        paweł zaic 2019
-    </footer>
+            <div id="projects">
+                <div class="main-grid">
+                    <div class="project">
+                        <!-- <div class="project-background-image"></div> -->
+                        <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>to-do list</h1></div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <!-- <div class="project-background-image"></div> -->
+                        <div class="project-overlay-text">
+                            <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                            <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                            <div class="project-title"><h1>calculator</h1></div>
+                        </div>
+                    </div>
+                    <div class="project">
+                    <!-- <div class="project-background-image"></div> -->
+                    <div class="project-overlay-text">
+                        <div class="demo"><a href="#" alt="demo"><span class=" fas fa-search"></span></a></div>
+                        <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                        <div class="project-title"><h1>weather forecast</h1></div>
+                    </div>
+                    </div>
+                    <div class="project">
+                        <!-- <div class="project-background-image"></div> -->
+                        <div class="project-overlay-text">
+                            <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                            <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                            <div class="project-title"><h1>cinema</h1></div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <!-- <div class="project-background-image"></div> -->
+                        <div class="project-overlay-text">
+                            <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                            <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                            <div class="project-title"><h1>guestlist</h1></div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <!-- <div class="project-background-image"></div> -->
+                        <div class="project-overlay-text">
+                            <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
+                            <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
+                            <div class="project-title"><h1>strava analyzer</h1></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer id="contact">
+            <div class="icons">
+            <a href="https://www.facebook.com/pawel.zaic" alt="Facebook" target="_blank">
+                <span class="fab fa-facebook-square"></span>
+            </a>
+            <a href="https://github.com/PabloFX" alt="GitHub" target="_blank">
+                <span class="fab fa-github"></span>
+            </a>
+            <a href="https://www.linkedin.com/in/paweł-zaic-69622aa5/" alt="Linkedin" target="_blank">
+                <span class="fab fa-linkedin"></span>
+            </a>
+            </div>
+            paweł zaic 2019
+        </footer>
+    </div>
 </body>
 </html>
