--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/style.css">
     <title>Pawel Zaic - portfolio</title>
+    <meta name="description" content="Pawel Zaic - portfolio website for CodersCamp">
 </head>
 <body>
-    <!-- <div class="site-wrapper"> -->
         <nav>
             <ul class="nav-bar">
                 <li><a href="#wrapper-main" alt="HOME">HOME</a></li>
@@ -59,7 +59,7 @@
             </div>
             <div id="skills">
                 <div class="wrapper-bar">
-                    <h2>stack</h2>
+                    <h2>skills</h2>
                     <div class="flex-wrapper">
                         <div class="flex-row main-skills">
                             <div class="skill">
@@ -103,7 +103,6 @@
             <div id="projects">
                 <div class="main-grid">
                     <div class="project">
-                        <!-- <div class="project-background-image"></div> -->
                         <div class="project-overlay-text">
                         <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
                         <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
@@ -111,7 +110,6 @@
                         </div>
                     </div>
                     <div class="project">
-                        <!-- <div class="project-background-image"></div> -->
                         <div class="project-overlay-text">
                             <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
                             <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
@@ -119,7 +117,6 @@
                         </div>
                     </div>
                     <div class="project">
-                    <!-- <div class="project-background-image"></div> -->
                     <div class="project-overlay-text">
                         <div class="demo"><a href="#" alt="demo"><span class=" fas fa-search"></span></a></div>
                         <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
@@ -127,7 +124,6 @@
                     </div>
                     </div>
                     <div class="project">
-                        <!-- <div class="project-background-image"></div> -->
                         <div class="project-overlay-text">
                             <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
                             <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
@@ -135,7 +131,6 @@
                         </div>
                     </div>
                     <div class="project">
-                        <!-- <div class="project-background-image"></div> -->
                         <div class="project-overlay-text">
                             <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
                             <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
@@ -143,7 +138,6 @@
                         </div>
                     </div>
                     <div class="project">
-                        <!-- <div class="project-background-image"></div> -->
                         <div class="project-overlay-text">
                             <div class="demo"><a href="#" alt="demo"><span class="fas fa-search"></span></a></div>
                             <div class="git-code"><a href="#" alt="git code"><span class="fas fa-code"></span></a></div>
